--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/details.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/details.xhtml
@@ -18,7 +18,6 @@
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <!--@elvariable id="isViewMode" type="boolean"-->
     <p:panelGrid id="editDetailForm" columns="2" cellpadding="10" layout="grid">
-        <p:row>
             <div>
                 <p:outputLabel for="title" value="#{msgs.processTitle}"/>
                 <p:inputText id="title" placeholder="#{msgs.processTitle}"
@@ -48,9 +47,6 @@
                 </p:selectOneMenu>
             </div>
 
-        </p:row>
-
-        <p:row>
             <div>
                 <p:outputLabel for="ruleset" value="#{msgs.ruleset}"/>
                 <p:selectOneMenu id="ruleset" value="#{ProcessForm.process.ruleset}" converter="#{rulesetConverter}"
@@ -83,7 +79,7 @@
                 </p:selectOneMenu>
             </div>
 
-            <div jsf:rendered="#{SecurityAccessController.hasAuthorityToAssignOcrdWorkflow()}">
+            <p:outputPanel rendered="#{SecurityAccessController.hasAuthorityToAssignOcrdWorkflow()}">
                 <p:outputLabel for="ocrdWorkflow" value="#{msgs.ocrdWorkflow}"/>
                 <p:selectOneMenu id="ocrdWorkflow" value="#{ProcessForm.ocrdWorkflow}"
                                  disabled="#{isViewMode}"
@@ -97,10 +93,8 @@
                                    itemLabel="#{ocrdWorkflow.value}"/>
                     <p:ajax event="change" oncomplete="toggleSave()"/>
                 </p:selectOneMenu>
-            </div>
-        </p:row>
+            </p:outputPanel>
 
-        <p:row>
             <div>
                 <p:outputLabel for="templateSwitch" value="#{msgs.processTemplate}"/>
                 <p:selectBooleanCheckbox styleClass="switch input"
@@ -109,6 +103,6 @@
                                          onchange="toggleSave()"
                                          value="#{ProcessForm.process.inChoiceListShown}"/>
             </div>
-        </p:row>
+
     </p:panelGrid>
 </ui:composition>
