--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/roleEdit/details.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/roleEdit/details.xhtml
@@ -20,15 +20,14 @@
 
     <p:panelGrid columns="1" layout="grid">
         <p:panelGrid columns="2" layout="grid">
-            <p:row>
+
                 <div>
                     <p:outputLabel for="titleInput" value="#{msgs.title}"/>
                     <p:inputText id="titleInput" class="input" disabled="#{isViewMode}"
                                  value="#{RoleForm.role.title}" placeholder="#{msgs.title}"
                                  required="#{empty param['editForm:saveButtonToggler']}"/>
                 </div>
-            </p:row>
-            <p:row rendered="#{SecurityAccessController.hasAuthorityGlobalToAddOrEditRole()}">
+            <p:outputPanel rendered="#{SecurityAccessController.hasAuthorityGlobalToAddOrEditRole()}">
                 <div>
                     <p:outputLabel for="client" value="#{msgs.client}"/>
                     <p:selectOneMenu id="client" converter="#{clientConverter}" value="#{RoleForm.role.client}">
@@ -39,11 +38,11 @@
                         <p:ajax event="change" oncomplete="toggleSave()"/>
                     </p:selectOneMenu>
                 </div>
-            </p:row>
-            <p:row rendered="#{not SecurityAccessController.hasAuthorityGlobalToAddOrEditRole()}" />
+            </p:outputPanel>
+            <p:outputPanel rendered="#{not SecurityAccessController.hasAuthorityGlobalToAddOrEditRole()}" />
         </p:panelGrid>
         <p:panelGrid columns="2" layout="grid">
-            <p:row>
+
                 <!--global authorities-->
                 <h:panelGroup>
                     <h3 style="margin-bottom: 20px">
@@ -64,9 +63,7 @@
                         <f:facet name="targetCaption">#{msgs.assigned}</f:facet>
                     </p:pickList>
                 </h:panelGroup>
-            </p:row>
 
-            <p:row>
                 <!--client authorities-->
                 <h:panelGroup>
                     <h3 style="margin-bottom: 20px">
@@ -87,9 +84,8 @@
                         <f:facet name="targetCaption">#{msgs.assigned}</f:facet>
                     </p:pickList>
                 </h:panelGroup>
-            </p:row>
+
         </p:panelGrid>
-        <p:row/>
     </p:panelGrid>
 
 </ui:composition>
