--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/templateEdit/details.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/templateEdit/details.xhtml
@@ -18,7 +18,7 @@
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <!--@elvariable id="isViewMode" type="boolean"-->
     <p:panelGrid id="editDetailForm" columns="2" cellpadding="10" layout="grid">
-        <p:row>
+
             <div>
                 <p:outputLabel for="title" value="#{msgs.templateTitle}"/>
                 <p:inputText id="title" placeholder="#{msgs.templateTitle}"
@@ -53,9 +53,7 @@
                 </p:selectBooleanCheckbox>
             </div>
 
-        </p:row>
 
-        <p:row>
             <div>
                 <p:outputLabel for="ruleset" value="#{msgs.ruleset}"/>
                 <p:selectOneMenu id="ruleset" value="#{TemplateForm.template.ruleset}"
@@ -96,7 +94,7 @@
                 </p:selectOneMenu>
             </div>
 
-            <div jsf:rendered="#{SecurityAccessController.hasAuthorityToAssignOcrdWorkflow()}">
+            <p:outputPanel rendered="#{SecurityAccessController.hasAuthorityToAssignOcrdWorkflow()}">
                 <p:outputLabel for="ocrdWorkflow" value="#{msgs.ocrdWorkflow}"/>
                 <p:selectOneMenu id="ocrdWorkflow" value="#{TemplateForm.ocrdWorkflow}"
                                  disabled="#{isViewMode}"
@@ -110,7 +108,7 @@
                                    itemLabel="#{ocrdWorkflow.value}"/>
                     <p:ajax event="change" oncomplete="toggleSave()"/>
                 </p:selectOneMenu>
-            </div>
-        </p:row>
+            </p:outputPanel>
+
     </p:panelGrid>
 </ui:composition>
